--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,8 @@
 body {
   margin: 0;
   padding: 0;
-  box-sizing:border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  box-sizing: border-box;
+  font-family: $primary-font, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -19,6 +19,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: $primary-font, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
